# wasm-pack-example

./: LICENSE  README.md  package.json  vite.config.ts
todos-rust/: .gitignore  Cargo.toml
todos-rust/crates/todos/: Cargo.toml
todos-rust/crates/todos-package/: Cargo.toml
todos-rust/crates/todos-rust/: Cargo.toml
todos-rust/crates/todos-rust/src/: lib.rs
todos-rust/crates/todos/src/: lib.rs
web-app/: package.json  vite.config.ts
web-app/js/: app.js
